--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -10,11 +10,11 @@ blocks:
       jobs:
         - name: Tests
           commands:
-            - sudo apt install gnupg ca-certificates
+            - sudo apt -y install gnupg ca-certificates
             - 'sudo apt-key adv --keyserver hkp://keyserver.ubuntu.com:80 --recv-keys 3FA7E0328081BFF6A14DA29AA6A19B38D3D831EF'
             - 'echo "deb https://download.mono-project.com/repo/ubuntu stable-focal main" | sudo tee /etc/apt/sources.list.d/mono-official-stable.list'
-            - sudo apt update
-            - sudo apt install mono-complete
+            - sudo apt -y update
+            - sudo apt -y install mono-complete
             - checkout
             - 'git clone https://github.com/openAOD/Central.git'
             - cp Central/TestSuite/test.sh .
