--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -20,5 +20,5 @@ blocks:
             - cp Central/TestSuite/test.sh .
             - rm -rf Central
             - export DATE=$(date)
-            - bash test.sh cpp | tee "test-report-$DATE"
+            - bash test.sh cs | tee "test-report-$DATE"
             - artifact push project "test-report-$DATE"
